Fixs pre not wrapping on mobile
Tracks 18F/cg-style#bug-firefox_layout_and_pre

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2274,6 +2274,10 @@ form input[type="submit"] {
   src: url("../fonts/merriweather-italic-webfont.eot");
   src: url("../fonts/merriweather-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/merriweather-italic-webfont.woff2") format("woff2"), url("../fonts/merriweather-italic-webfont.woff") format("woff"), url("../fonts/merriweather-italic-webfont.ttf") format("truetype"); }
 
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word; }
+
 table {
   border-collapse: collapse;
   border-spacing: 0; }
@@ -2722,13 +2726,12 @@ blockquote {
     color: #277CB2; }
 
 .section {
-  overflow: hidden;
-  padding-bottom: 4.5rem;
-  padding-top: 4.5rem; }
+  padding-bottom: 12.5rem;
+  padding-top: 2.75rem; }
 
 .section-middle {
-  padding-bottom: 4.5rem;
-  padding-top: 4.5rem; }
+  padding-bottom: 12.2rem;
+  padding-top: 1.5rem; }
 
 .section-content {
   margin-top: 0; }
@@ -2749,9 +2752,20 @@ blockquote {
         margin-right: auto; } }
 
 .section-dark {
-  color: #ffffff; }
+  color: #ffffff;
+  position: relative; }
   .section-dark a {
     color: #3498DB; }
+  .section-dark:before {
+    background-image: url("../img/chevron-top.svg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    content: '';
+    display: block;
+    height: 4.865rem;
+    position: absolute;
+    top: -4.865rem;
+    width: 100%; }
 
 .section-bg-parent {
   position: relative; }
@@ -2782,13 +2796,54 @@ blockquote {
       background-position-x: 108%; } }
 
 .section-light {
-  background: #ffffff; }
+  background: #ffffff;
+  position: relative; }
+  .section-light:before {
+    background-image: url("../img/chevron-bottom.svg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    content: '';
+    display: block;
+    height: 4.865rem;
+    position: absolute;
+    top: -4.865rem;
+    width: 100%; }
+
+.section-chevron_alt.section-chevron_alt {
+  padding-bottom: 6.5rem; }
+  .section-chevron_alt.section-chevron_alt:not(.section-first) {
+    background-color: #1F2C38;
+    margin-top: -4.5rem;
+    padding-top: 4.865rem; }
+  .section-chevron_alt.section-chevron_alt:not(.section-first):before {
+    background-image: url("../img/chevron-top-inverse.svg");
+    top: -4.865rem; }
+  .section-chevron_alt.section-chevron_alt:after {
+    background-image: url("../img/chevron-bottom-inverse.svg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    bottom: 0rem;
+    content: '';
+    display: block;
+    height: 4.865rem;
+    position: absolute;
+    width: 100%; }
+  .section-chevron_alt.section-chevron_alt + .section-middle {
+    padding-top: 4.5rem; }
+    .section-chevron_alt.section-chevron_alt + .section-middle:before {
+      display: none; }
+  .section-chevron_alt.section-chevron_alt .section-icon {
+    margin-top: 3.3rem; }
+
+.section-first:before {
+  display: none; }
 
 .section-icon {
   left: 50%;
   margin-left: -2.4375rem;
-  margin-top: 1.7rem;
-  position: absolute; }
+  margin-top: 4.7rem;
+  position: absolute;
+  z-index: 1; }
 
 .title_bar {
   margin: 0 auto;
